avoid text overflow

--- a/src/template/blog-post.module.scss
+++ b/src/template/blog-post.module.scss
@@ -13,7 +13,6 @@
 }
 
 .article {
-  display: grid;
   font-size: var(--text-prose);
   gap: var(--space-md);
   letter-spacing: var(--text-prose-tracking);
